--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Calibri, sans-serif;
-    font size:algerian;
-    background-color: #f4f4f4;
-    color: #333;
+    font-family: 'Georgia', serif;
+    font-size: 18px;
+    background-color: #e0e0e0;
+    color: #444;
     margin: 0;
     padding: 0;
     text-align: center;
